SONARJAVA-6430 Centralize class-like tree kinds (#5869)