@@ -115,7 +115,7 @@ public class PublicStaticMutableMembersCheck extends IssuableSubscriptionVisitor
 
   @Override
   public List<Tree.Kind> nodesToVisit() {
-    return Arrays.asList(Tree.Kind.INTERFACE, Tree.Kind.CLASS, Tree.Kind.ENUM, Tree.Kind.ASSIGNMENT);
+    return List.of(Tree.Kind.INTERFACE, Tree.Kind.CLASS, Tree.Kind.ENUM, Tree.Kind.ASSIGNMENT);
   }
 
   @Override
@@ -170,8 +170,8 @@ public class PublicStaticMutableMembersCheck extends IssuableSubscriptionVisitor
 
   @Override
   public void leaveNode(Tree tree) {
-    // cleanup
-    if (tree.is(Tree.Kind.CLASS, Tree.Kind.ENUM)) {
+    // cleanup for every class-like declaration visited (i.e. all subscribed nodes except ASSIGNMENT)
+    if (!tree.is(Tree.Kind.ASSIGNMENT)) {
       IMMUTABLE_CANDIDATES.removeAll(CLASS_IMMUTABLE_CANDIDATES.getOrDefault(tree, Collections.emptyList()));
     }
   }
